add login screen.

--- a/SMS/Base.lproj/Main.storyboard
+++ b/SMS/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Users-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="UsersViewController" id="BYZ-38-t0r" customClass="UsersViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -86,6 +86,16 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Users" id="dEN-TK-YfA">
+                        <barButtonItem key="leftBarButtonItem" title="Sign Out" style="plain" id="ooX-IH-NvF">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="4gS-z2-JWs">
+                                <rect key="frame" x="16" y="7" width="83" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Sign Out"/>
+                                <connections>
+                                    <action selector="onSignOut:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sfN-EO-tDv"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Add" style="plain" id="5Iz-eO-enP">
                             <connections>
                                 <action selector="onAdd:" destination="BYZ-38-t0r" id="81S-Tr-fEf"/>
@@ -98,7 +108,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="996" y="777"/>
+            <point key="canvasLocation" x="1556" y="777"/>
         </scene>
         <!--New User-->
         <scene sceneID="E7F-nn-EVv">
@@ -183,7 +193,81 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GEh-EY-uhf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1688.8" y="776.76161919040487"/>
+            <point key="canvasLocation" x="2249" y="777"/>
+        </scene>
+        <!--Login View Controller-->
+        <scene sceneID="sa5-sV-91I">
+            <objects>
+                <viewController storyboardIdentifier="LoginViewController" id="HQ4-BM-UAN" customClass="LoginViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="JU7-Yh-xEK"/>
+                        <viewControllerLayoutGuide type="bottom" id="EN5-Hi-T8S"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Nq7-pq-1vC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yv0-f8-m62">
+                                <rect key="frame" x="71" y="184" width="45.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Opf-XR-UE3">
+                                <rect key="frame" x="38" y="245" width="78.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZW5-OA-pIc">
+                                <rect key="frame" x="150" y="179.5" width="150" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="6dH-yA-xNO"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fTV-GJ-Vjc">
+                                <rect key="frame" x="150" y="240" width="150" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Opf-XR-UE3" firstAttribute="top" secondItem="yv0-f8-m62" secondAttribute="bottom" constant="40" id="FuX-OG-BWr"/>
+                            <constraint firstItem="Opf-XR-UE3" firstAttribute="trailing" secondItem="yv0-f8-m62" secondAttribute="trailing" id="LAg-vy-kbX"/>
+                            <constraint firstItem="fTV-GJ-Vjc" firstAttribute="width" secondItem="ZW5-OA-pIc" secondAttribute="width" id="PpN-PK-FSd"/>
+                            <constraint firstItem="fTV-GJ-Vjc" firstAttribute="centerY" secondItem="Opf-XR-UE3" secondAttribute="centerY" id="eyb-Br-27L"/>
+                            <constraint firstItem="fTV-GJ-Vjc" firstAttribute="centerX" secondItem="ZW5-OA-pIc" secondAttribute="centerX" id="jUY-6W-nHF"/>
+                            <constraint firstItem="ZW5-OA-pIc" firstAttribute="centerX" secondItem="Nq7-pq-1vC" secondAttribute="centerX" multiplier="1.2" id="lQK-Uf-hII"/>
+                            <constraint firstItem="ZW5-OA-pIc" firstAttribute="centerY" secondItem="yv0-f8-m62" secondAttribute="centerY" id="nlA-r8-q0G"/>
+                            <constraint firstItem="yv0-f8-m62" firstAttribute="centerX" secondItem="Nq7-pq-1vC" secondAttribute="centerX" multiplier="0.5" id="suu-kV-sS4"/>
+                            <constraint firstItem="yv0-f8-m62" firstAttribute="top" secondItem="JU7-Yh-xEK" secondAttribute="bottom" constant="120" id="ygS-5D-D5u"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="8O4-MK-zQm">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="tcP-Dr-vUu">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="T3N-ha-GKW">
+                                <rect key="frame" x="276" y="7" width="83" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Login"/>
+                                <connections>
+                                    <action selector="onLogin:" destination="HQ4-BM-UAN" eventType="touchUpInside" id="8rW-im-i9W"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="txtEmail" destination="ZW5-OA-pIc" id="Cbk-um-qoM"/>
+                        <outlet property="txtPassword" destination="fTV-GJ-Vjc" id="kZu-Xf-OMV"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="U3X-J5-osC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="812" y="777"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Lft-te-yPZ">
@@ -196,7 +280,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="eTA-3O-tKs"/>
+                        <segue destination="HQ4-BM-UAN" kind="relationship" relationship="rootViewController" id="xZr-uc-GTO"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ISe-4N-cnW" userLabel="First Responder" sceneMemberID="firstResponder"/>
